<resources>
    <string name="app_name">Video To Image</string>
    <string name="select_video">Select Video</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow_maker">Slideshow Maker</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
</resources>